fix box jumping after selected for some line in tab 'ancestors' in famous family.

--- a/components/com_manager/modules/ancestors/css/jmb.ancestors.css
+++ b/components/com_manager/modules/ancestors/css/jmb.ancestors.css
@@ -1,4 +1,4 @@
-.tab_content.famous_family .line-without-border{
+.tab_content.famous-family .line-without-border{
     border: 2px solid #f9f3f0;
 }
 .tab_content.myfamily .line-without-border{
